force-app/main/default/objects/Message_Event__e/Message_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event top communicate that a message has been sent or the read receipts have been updated on a chat, consumed by Processes that create records that are used for reporting</description>
    <label>Message Event</label>
    <pluralLabel>Message Events</pluralLabel>
</CustomObject>