force-app/main/default/objects/Message_Event__e/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <length>18</length>
    <type>Text</type>
</CustomField>