force-app/main/default/objects/Message_Event__e/fields/Chat__c.field-meta.xml
<CustomField>
    <fullName>Chat__c</fullName>
    <label>Chat</label>
    <length>18</length>
    <type>Text</type>
</CustomField>