force-app/main/default/objects/Message_Event__e/fields/Context_Child__c.field-meta.xml
<CustomField>
    <fullName>Context_Child__c</fullName>
    <label>Context Child</label>
    <length>18</length>
    <type>Text</type>
</CustomField>