force-app/main/default/objects/Message_Event__e/fields/Context_Parent__c.field-meta.xml
<CustomField>
    <fullName>Context_Parent__c</fullName>
    <label>Context Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>