force-app/main/default/objects/Message_Event__e/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>