force-app/main/default/objects/Message_Event__e/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>