force-app/main/default/objects/Message_Event__e/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <description>Datetime the message was sent</description>
    <label>When</label>
    <type>DateTime</type>
</CustomField>